--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ice-cream",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://oleksandrpm.github.io/ice-cream/",
+  "homepage": "https://Dvorakovskyi.github.io/IceCream/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /ice-cream/"
+    "build": "parcel build src/*.html --public-url /IceCream/"
   },
   "repository": {
     "type": "git",
